// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon demo examples Snapshots: color 1`] = `
.emotion-0 {
  color: coral;
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

<IconSentimentSatisfied
  color="coral"
>
  <Icon
    color="coral"
    rtl={false}
    size="medium"
  >
    <Styled(svg)
      aria-hidden={true}
      color="coral"
      focusable="false"
      role="img"
      rtl={false}
      size="medium"
      viewBox="0 0 24 24"
    >
      <svg
        aria-hidden={true}
        className="emotion-0"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="15.5"
            cy="9.5"
            r="1.5"
          />
          <circle
            cx="8.5"
            cy="9.5"
            r="1.5"
          />
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
          />
        </g>
      </svg>
    </Styled(svg)>
  </Icon>
</IconSentimentSatisfied>
`;

exports[`Icon demo examples Snapshots: custom 1`] = `
.emotion-0 {
  fill: currentcolor;
  font-size: 16px;
  height: 7em;
  width: 7em;
}

<Icon
  size="7em"
  title="Mineral UI"
>
  <Styled(svg)
    aria-hidden={null}
    aria-labelledby="icon-title-icon-9"
    focusable="false"
    role="img"
    size="7em"
    viewBox="0 0 24 24"
  >
    <svg
      aria-hidden={null}
      aria-labelledby="icon-title-icon-9"
      className="emotion-0"
      focusable="false"
      role="img"
      viewBox="0 0 24 24"
    >
      <title
        id="icon-title-icon-9"
      >
        Mineral UI
      </title>
      <svg
        viewBox="0 0 50 50"
      >
        <path
          d="M 25 2 C 12.308594 2 2 12.308594 2 25 C 2 34.832031 8.183594 43.246094 16.875 46.53125 C 17.394531 46.71875 17.964844 46.453125 18.15625 45.9375 L 23.125 32.84375 C 23.226563 32.589844 23.21875 32.308594 23.105469 32.0625 C 22.996094 31.8125 22.789063 31.621094 22.53125 31.53125 C 19.886719 30.53125 18 28.003906 18 25 C 18 21.121094 21.121094 18 25 18 C 28.878906 18 32 21.121094 32 25 C 32 28.003906 30.113281 30.53125 27.46875 31.53125 C 27.210938 31.621094 27.003906 31.8125 26.894531 32.0625 C 26.78125 32.308594 26.773438 32.589844 26.875 32.84375 L 31.84375 45.9375 C 32.035156 46.453125 32.605469 46.71875 33.125 46.53125 C 41.816406 43.246094 48 34.832031 48 25 C 48 12.308594 37.691406 2 25 2 Z M 25 4 C 36.609375 4 46 13.390625 46 25 C 46 33.621094 40.730469 40.917969 33.3125 44.15625 L 29.0625 32.9375 C 31.972656 31.445313 34 28.488281 34 25 C 34 20.042969 29.957031 16 25 16 C 20.042969 16 16 20.042969 16 25 C 16 28.488281 18.027344 31.445313 20.9375 32.9375 L 16.6875 44.15625 C 9.269531 40.917969 4 33.621094 4 25 C 4 13.390625 13.390625 4 25 4 Z"
        />
      </svg>
    </svg>
  </Styled(svg)>
</Icon>
`;

exports[`Icon demo examples Snapshots: icon 1`] = `
.emotion-0 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

<IconSentimentSatisfied>
  <Icon
    rtl={false}
    size="medium"
  >
    <Styled(svg)
      aria-hidden={true}
      focusable="false"
      role="img"
      rtl={false}
      size="medium"
      viewBox="0 0 24 24"
    >
      <svg
        aria-hidden={true}
        className="emotion-0"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="15.5"
            cy="9.5"
            r="1.5"
          />
          <circle
            cx="8.5"
            cy="9.5"
            r="1.5"
          />
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
          />
        </g>
      </svg>
    </Styled(svg)>
  </Icon>
</IconSentimentSatisfied>
`;

exports[`Icon demo examples Snapshots: rtl 1`] = `
.emotion-0 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  -webkit-transform: scaleX(-1);
  -ms-transform: scaleX(-1);
  transform: scaleX(-1);
  width: 1em;
}

<ThemeProvider>
  <ThemeProvider>
    <IconHelp>
      <Icon
        rtl={true}
        size="medium"
      >
        <Styled(svg)
          aria-hidden={true}
          focusable="false"
          role="img"
          rtl={true}
          size="medium"
          viewBox="0 0 24 24"
        >
          <svg
            aria-hidden={true}
            className="emotion-0"
            focusable="false"
            role="img"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
              />
            </g>
          </svg>
        </Styled(svg)>
      </Icon>
    </IconHelp>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Icon demo examples Snapshots: sizes 1`] = `
.emotion-1 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

.emotion-0 {
  fill: currentcolor;
  font-size: 16px;
  height: 0.75em;
  width: 0.75em;
}

.emotion-2 {
  fill: currentcolor;
  font-size: 16px;
  height: 1.25em;
  width: 1.25em;
}

.emotion-3 {
  fill: currentcolor;
  font-size: 16px;
  height: 7em;
  width: 7em;
}

<div>
  <IconSentimentSatisfied
    size="small"
  >
    <Icon
      rtl={false}
      size="small"
    >
      <Styled(svg)
        aria-hidden={true}
        focusable="false"
        role="img"
        rtl={false}
        size="small"
        viewBox="0 0 24 24"
      >
        <svg
          aria-hidden={true}
          className="emotion-0"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="15.5"
              cy="9.5"
              r="1.5"
            />
            <circle
              cx="8.5"
              cy="9.5"
              r="1.5"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
            />
          </g>
        </svg>
      </Styled(svg)>
    </Icon>
  </IconSentimentSatisfied>
  <IconSentimentSatisfied>
    <Icon
      rtl={false}
      size="medium"
    >
      <Styled(svg)
        aria-hidden={true}
        focusable="false"
        role="img"
        rtl={false}
        size="medium"
        viewBox="0 0 24 24"
      >
        <svg
          aria-hidden={true}
          className="emotion-1"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="15.5"
              cy="9.5"
              r="1.5"
            />
            <circle
              cx="8.5"
              cy="9.5"
              r="1.5"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
            />
          </g>
        </svg>
      </Styled(svg)>
    </Icon>
  </IconSentimentSatisfied>
  <IconSentimentSatisfied
    size="large"
  >
    <Icon
      rtl={false}
      size="large"
    >
      <Styled(svg)
        aria-hidden={true}
        focusable="false"
        role="img"
        rtl={false}
        size="large"
        viewBox="0 0 24 24"
      >
        <svg
          aria-hidden={true}
          className="emotion-2"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="15.5"
              cy="9.5"
              r="1.5"
            />
            <circle
              cx="8.5"
              cy="9.5"
              r="1.5"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
            />
          </g>
        </svg>
      </Styled(svg)>
    </Icon>
  </IconSentimentSatisfied>
  <IconSentimentSatisfied
    size="7em"
  >
    <Icon
      rtl={false}
      size="7em"
    >
      <Styled(svg)
        aria-hidden={true}
        focusable="false"
        role="img"
        rtl={false}
        size="7em"
        viewBox="0 0 24 24"
      >
        <svg
          aria-hidden={true}
          className="emotion-3"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="15.5"
              cy="9.5"
              r="1.5"
            />
            <circle
              cx="8.5"
              cy="9.5"
              r="1.5"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
            />
          </g>
        </svg>
      </Styled(svg)>
    </Icon>
  </IconSentimentSatisfied>
</div>
`;

exports[`Icon demo examples Snapshots: title 1`] = `
.emotion-0 {
  fill: currentcolor;
  font-size: 16px;
  height: 1em;
  width: 1em;
}

<IconSentimentSatisfied
  title="smiley-face"
>
  <Icon
    rtl={false}
    size="medium"
    title="smiley-face"
  >
    <Styled(svg)
      aria-hidden={null}
      aria-labelledby="icon-title-icon-7"
      focusable="false"
      role="img"
      rtl={false}
      size="medium"
      viewBox="0 0 24 24"
    >
      <svg
        aria-hidden={null}
        aria-labelledby="icon-title-icon-7"
        className="emotion-0"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <title
          id="icon-title-icon-7"
        >
          smiley-face
        </title>
        <g>
          <circle
            cx="15.5"
            cy="9.5"
            r="1.5"
          />
          <circle
            cx="8.5"
            cy="9.5"
            r="1.5"
          />
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm0-4c-1.48 0-2.75-.81-3.45-2H6.88a5.495 5.495 0 0 0 10.24 0h-1.67c-.7 1.19-1.97 2-3.45 2z"
          />
        </g>
      </svg>
    </Styled(svg)>
  </Icon>
</IconSentimentSatisfied>
`;
